--- a/style_reservia.css
+++ b/style_reservia.css
@@ -8,4 +8,134 @@
     font-weight: 400;
     font-style: normal;
 }
+*
+{
+    font-family: 'Raleway Regular';
+}
 
+/*Icones*/
+#map-marker, #money-bill, #child-solid, #heart-solid, #dog-solid, #info-circle, #chart-line{
+    width: 1em;
+    height: 1em;
+    fill: currentColor;
+}
+
+
+/*NAV*/
+
+#ul_menu{
+    display: flex;
+    justify-content: flex-end;
+    list-style-type: none;
+}
+
+#ul_menu li{
+    margin-right: 5em;
+}
+
+#ul_menu a{
+    text-decoration:none;
+}
+
+#inscription{
+    align-self: flex-end;
+}
+
+
+/*BLOC PAGE*/
+#bloc_page{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/*Choix ville*/
+#ville{
+    display: flex; 
+    margin-bottom: 2em;
+    
+}
+
+/*Filtres*/
+#filtres{
+    display: flex;
+    justify-content: flex-start;
+    align-items: start;
+}
+
+#economique, #familial, #romantique, #animaux{
+    list-style-type: none;
+    text-decoration:none;
+}
+
+/*Info*/
+#info{
+    display: flex; 
+    justify-content: flex-start;
+}
+
+/*Aside*/
+#pop{
+    display: flex;
+    flex-direction: column;
+    float: right;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+.img_aside{
+    width: 127px;
+    height: 134px;
+}
+
+/*Article*/
+.img_article{
+    width: 236px;
+    height: 114px;
+}
+
+/*Activités*/
+#section_activités{
+    display: flex;
+}
+#act1_2_img{
+    display: flex;
+    flex-direction: column;
+}
+#act2_2_img{
+    display: flex;
+    flex-direction: column;
+}
+#section_activités img{
+    width: 302px;
+}
+.img_activites_tall{
+    height: 444px;
+}
+.img_activites_medium{
+    height: 181px;
+}
+.img_activites_small{
+    height: 110px;
+}
+#activités_1{
+    display: flex;
+}
+#activités_2{
+    display: flex;
+}
+
+
+/*Footer*/
+#footer{
+    display: flex
+}
+
+.ul_footer{
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    text-decoration:none;
+}
+.ul_footer a{
+    text-decoration:none;
+}
