--- a/style_reservia.css
+++ b/style_reservia.css
@@ -11,48 +11,64 @@
 
 *
 {
-    font-family: 'Raleway Regular';
+    font-family: 'Raleway';
 }
 
 /*Icones*/
-#map-marker, #money-bill, #child-solid, #heart-solid, #dog-solid, #info-circle, #chart-line{
+.icon{
     width: 1em;
     height: 1em;
     fill: currentColor;   
 }
 
-#map-marker{
+.fa-map-marker-alt{
     background-color: #f2f2f2;
-    width: 1.5em;
-    height: 1.5em;
+    display: flex;
+    font-size: 1.3em;
+    justify-content: center;
+    align-items: center;
+
 }
 
-#money-bill, #child-solid, #heart-solid, #dog-solid{
+.iconbleu{
     color: #0065fc;
     background-color: #deebff;
     padding: 1em;
     border-radius: 50%;
 }
 
-#star-solid{
+.etoile{
     width: 1.1em;
     height: 1.1em; 
+}
+
+.etoile_bleue{
     fill: #0065fc;
     color: #0065fc;
 }
 
-#star-solid-gris{
-    width: 1.1em;
-    height: 1.1em;
+.etoile_grise{
     fill: #d9d9d9;
     color: #d9d9d9;
 }
 
-#info-circle{
-    background-color: #0065fc;
-    color: #ffffff;
+.icon_i{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    color: #0065fc;
+    font-size: 0.8em;
+    border: solid #d9d9d9 1px;
     border-radius: 50%;
+    width: 0.8em;
+    height: 0.8em;
+    padding: 0.5em 0.4em 0.6em 0.8em;
+    margin-right: 0.9em;
 }
+
+
+
+
 
 /*Margin Body*/
 
@@ -62,6 +78,9 @@
     margin-top: 2.65%;
     margin-bottom: 2.65%;
 }
+
+
+
 
 /*HEADER*/
 
@@ -75,43 +94,37 @@
     display: flex-start;
 }
 
+
+
+
 /*NAV*/
 
-#nav_menu{
+#nav_header{
     display: flex;
     align-self: flex-end;
     list-style-type: none;
 }
 
-#ul_menu li{
+.ul_li{
     margin-right: 5em;
+    display: inline-block;
 }
 
-#ul_menu a{
+.ul_li_ancre{
+border-top: solid 2px transparent;
+}
+
+.ul_li_a{
     text-decoration:none;
     color:black;
 }
 
-#li_hebergement{
-    display: inline-block;
-    color: black;
-}
-
-#li_activites{
-    display: inline-block;
-    color: black
-}
-
 #inscription{
-    align-self: flex-end;
-    display: inline-block;
-    color: #0065fc;
-}
-
-#inscription a{
     color: #0065fc; 
-
 }
+
+
+
 
 
 /*BLOC PAGE*/
@@ -125,24 +138,46 @@ h1{
 }
 
 
+
 /*Choix ville*/
+
+
+#ville{
+    display: flex; 
+    align-items: center;
+    margin-bottom: 2em;
+}
+
+.span_icon_map-marker{
+    background-color: #f2f2f2;
+    padding-right: 1.4em;
+    padding-left: 1.4em;
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+#selection_ville{
+    border-top: solid #f2f2f2 1px;
+    border-bottom: solid #f2f2f2 1px;
+    border-right: none;
+    border-left: none;
+    padding: 1em;
+    padding-left: 1.5em;
+}
 
 #recherche_ville{
     color: #ffffff;
     background-color:#0065fc;
+    border: solid #0065fc 1px;
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
-    padding: 1em
-}
-#selection_ville{
-    border-top: solid #f2f2f2 1px;
-    border-bottom: solid #f2f2f2 1px;
+    padding: 1em;
 }
 
-#ville{
-    display: flex; 
-    margin-bottom: 2em;
-}
+
+
 
 /*Filtres*/
 #filtres{
@@ -151,26 +186,28 @@ h1{
     align-items: center;
 }
 
-#filtres_h4, #eco, #famille, #coeur, #chien{
+.div_filtres{
     display: inline-block;
     vertical-align: top;
-    margin-right: 3%;
-}
-
-#economique, #familial, #romantique, #animaux{
-    list-style-type: none;
-    text-decoration:none;
-    color: black;
     border-top: solid #d9d9d9 2px;
     border-right: solid #d9d9d9 2px;
     border-bottom: solid #d9d9d9 2px;
     border-left: none;
-    border-radius: 50px;
-    padding: 1em;
-    padding-left: 0;
+    border-radius: 0 60px 60px 0;
+    padding: 0 0.9em 0 0.9em;
+    margin: 0 2em 0 0
 }
 
+.span_icon_filtres{
+    display: inline-block;
+    padding: 0 0.9em 0 0;
+}
 
+.liens_filtres{
+    list-style-type: none;
+    text-decoration:none;
+    color: black;
+}
 
 /*Info*/
 #info{
@@ -178,6 +215,8 @@ h1{
     justify-content: flex-start;
     align-items: center;
 }
+
+
 
 
 /*ASIDE*/
@@ -226,6 +265,8 @@ h1{
 }
 
 
+
+
 /*Article*/
 #hebergement{
     width: 66%;
@@ -253,6 +294,11 @@ h1{
     text-decoration:none;
     color:black;
 }
+
+
+
+
+
 
 
 /*Activités*/
@@ -312,6 +358,11 @@ h1{
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
+
+
+
+
+
 
 /*Footer*/
 #footer{
