--- a/style_reservia.css
+++ b/style_reservia.css
@@ -32,8 +32,8 @@
 }
 
 .etoile{
-    width: 1.1em;
-    height: 1.1em; 
+    width: 1em;
+    height: 1em; 
 }
 
 .etoile_bleue{
@@ -44,6 +44,10 @@
 .etoile_grise{
     fill: #d9d9d9;
     color: #d9d9d9;
+}
+
+.fa-chart-line{
+    font-size: 1.9em;
 }
 
 .icon_i{
@@ -285,45 +289,62 @@ border-top: solid 2px transparent;
     display: flex;
     flex-direction: column;
     min-width: 29vw;
+    height: 84vh;
     background-color: #f2f2f2 ;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    border-radius: 20px;
+    border-radius: 25px;
+    margin-bottom: 3vw;
 }
 
-#pop_h2{
+.div_pop_h2{
+    padding: 3vw 2.5vw 0 2.5vw;
+    margin-bottom: 2vw;
+}
+
+.span_pop_h2{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-#aside_figures{
+#div_aside{
     display: flex;
     flex-direction: column;
-    align-self: start;
+    padding: 0 2.5vw 0 2.5vw;
 }
 
-.class_aside_figure{
+.aside_cards{
     display: flex;
-    align-items: left;
     background-color: #ffffff;
-    border-radius: 10px;
-    padding: 0.3em
+    border-radius: 25px;
+    width: 23vw;
+    height: 170px;
+    padding: 0.4em 0 0.4em 0.4em;
+    margin-bottom: 2vw;
+    box-shadow: 2px 2px 15px #d9d9d9;
+}
+
+.aside_a{
+    display: flex;
+    text-decoration:none;
+    color: black;
 }
 
 .img_aside{
-    width: 127px;
-    height: 134px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: flex-start;
+    width: 40%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 0 0 20px;
 }
 
-.aside_figcaption{
+.div_info_cards_aside{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
+.info_cards_aside{
+    padding: 0 0 0 1em;
+}
 
 
 
@@ -331,9 +352,9 @@ border-top: solid 2px transparent;
 #hebergement{
     min-width: 60.5vw;
     background-color: #f2f2f2 ;
-    margin-right: 3vw;
-    margin-left: 3vw;
-    border-radius: 20px;
+    margin: 0 3vw 3vw 3vw;
+    border-radius: 25px;
+    padding-bottom: 7vh;
 }
 
 .titre_article{
@@ -344,20 +365,20 @@ border-top: solid 2px transparent;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding: 0 1.5em 0 1.5em;
+    padding: 0 1.5em 2em 1.5em;
 }
 .article_cards{
     background-color: #ffffff;
     background-size: cover;
-    padding: 0.4em;
-    margin: 0 1vw 2.6vw 1vw;
+    padding: 0.4em 0.4em 0 0.4em;
+    margin: 0 1vw 2vw 1vw;
     border-radius: 25px;
-    width: 16vw;
-    height: 25vh;
+    width: 15.5vw;
+    height: 240px;
+    box-shadow: 2px 2px 15px #d9d9d9;
 }
 
 .article_a{
-    list-style-type: none;
     text-decoration:none;
     color: black;
 }
@@ -367,11 +388,20 @@ border-top: solid 2px transparent;
     height: 60%;
     width: 100%;
     object-fit: cover;
+    
 }
 
-#afficher_plus{
-    text-decoration:none;
-    color:black;
+.info_cards_article{
+    padding: 0 0 0.5em 1em;
+}
+
+.etoiles_art{
+    padding: 0 0 0 1em;
+}
+
+.afficher_plus{
+    font-size: 1.3em;
+    padding: 0 0 3vw 3vw;
 }
 
 
@@ -384,61 +414,91 @@ border-top: solid 2px transparent;
 #section_activités{
     display: flex;
     flex-direction: column;
+    min-width: 92.5vw;
+    margin: 3vh 0 3vh 0;
+}
+
+.titre_activites{
+    padding: 0 0 2vw 0;
 }
 
 #div_activites{
     display: flex;
+    flex-wrap: nowrap;
+}
+
+.groupe_3activites{
+    display: flex;
+    width: 45vw;
+}
+
+.groupe_2activites{
+    display: flex;
+    flex-direction: column;
+}
+
+.activite_gd_format{
+    display: flex;
+    flex-direction: column;
     justify-content: left;
-    flex-wrap: wrap;
-}
-
-#act_1{
-    display: flex;
-}
-
-#act_2{
-    display: flex;
-}
-
-#act_1_2_img{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-#act_2_2_img{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-#section_activités img{
-    width: 302px;
-}
-
-.class_act_figure{
     border-radius: 20px;
+    margin: 0;
+    padding-right: 3vw;
+    height: 25vh;
+    width: 302px;
+    box-shadow: 2px 2px 15px #f2f2f2;
 }
 
-.img_activites_tall{
+.activites_petit_format{
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    width: 302px; 
+    margin: 0; 
+    padding-bottom: 3vw;
+    box-shadow: 2px 2px 15px #f2f2f2;
+}
+
+/*a href activités*/
+.activites_a{
+    text-decoration:none;
+    color: black;
+}
+
+.act_vieuxport_calanques{
     height: 444px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+}
+.act_pomegues{
+    height: 238px;
+}
+.act_frioul{
+    height: 165px;
+}
+.act_nddlg{
+    height: 195px;
+}
+.act_longchamp{
+    height: 209px;
 }
 
-.img_activites_medium{
-    height: 181px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+
+
+/*Images Activités*/
+
+.img_activites{
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-shadow: 2px 2px 12px #f2f2f2;
 }
 
-.img_activites_small{
-    height: 110px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+
+
+/*Info activités*/
+.info_activites{
+    display: flex;
 }
-
-
 
 
 
@@ -446,10 +506,19 @@ border-top: solid 2px transparent;
 /*Footer*/
 #footer{
     display: flex;
-    width: 100%;
     flex-wrap: wrap;
     margin-top: 3.3%;
+    padding: 6vh 3vw 6vh 3vw;
     background-color: #f2f2f2 ;
+}
+
+.div_footer{
+    margin-right: 20%;
+    padding-bottom: 1.5em;
+}
+
+.h4_footer{
+    padding-bottom: 2em;
 }
 
 .ul_footer{
@@ -460,12 +529,11 @@ border-top: solid 2px transparent;
     text-decoration:none;
 }
 
-#a_propos, #nos_hebergements, #assistance{
-    margin-right: 20%;
-    padding-bottom: 1.5em;
+.li_footer{
+    padding-bottom: 1em;
 }
 
-.ul_footer a{
+.ahref_footer{
     text-decoration:none;
     color: black;
 }
