--- a/style_reservia.css
+++ b/style_reservia.css
@@ -29,6 +29,7 @@
     font-size: 1.2em;
     color: #0065fc;
     background-color: #deebff;
+    border-radius: 50%;
 }
 
 .etoile{
@@ -204,6 +205,7 @@ border-top: solid 2px transparent;
     flex-direction: row-reverse;
     list-style-type: none;
     text-decoration:none;
+    align-items: center;
     color: black;
     max-height: 1em;
     border-top: solid #d9d9d9 2px;
@@ -223,29 +225,9 @@ border-top: solid 2px transparent;
     margin-right: 1em;
     background-color: #deebff;
     border-radius: 50%;
+    height: 52px; 
+    width: 52px; 
 }
-
-.fa-money-bill-wave{
-    padding: 0.855em 0.75em 0.86em 0.75em;
-    border-radius: 50%;
-}
-
-.fa-child{
-    padding: 0.855em 1em 0.86em 1em;
-    border-radius: 50%;
-}
-
-.fa-heart{
-    padding: 0.86em 0.86em 0.86em 0.86em;
-    border-radius: 50%;
-}
-
-.fa-dog{
-    padding: 0.865em 0.86em 0.86em 0.86em;
-    border-radius: 50%;
-}
-
-
 
 
 
@@ -288,36 +270,35 @@ border-top: solid 2px transparent;
 #pop{
     display: flex;
     flex-direction: column;
-    min-width: 29vw;
-    height: 84vh;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 45vw;
     background-color: #f2f2f2 ;
     border-radius: 25px;
-    margin-bottom: 3vw;
 }
 
-.div_pop_h2{
-    padding: 3vw 2.5vw 0 2.5vw;
-    margin-bottom: 2vw;
-}
 
 .span_pop_h2{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 22vw;
+    margin: 2vw 0 2vw 0;
 }
 
 #div_aside{
     display: flex;
     flex-direction: column;
-    padding: 0 2.5vw 0 2.5vw;
+    justify-content: center;
+    align-items: center;
 }
 
 .aside_cards{
     display: flex;
     background-color: #ffffff;
     border-radius: 25px;
-    width: 23vw;
-    height: 170px;
+    width: 22vw;
+    height: 180px;
     padding: 0.4em 0 0.4em 0.4em;
     margin-bottom: 2vw;
     box-shadow: 2px 2px 15px #d9d9d9;
@@ -350,31 +331,34 @@ border-top: solid 2px transparent;
 
 /*Article*/
 #hebergement{
-    min-width: 60.5vw;
+    min-width: 60vw;
     background-color: #f2f2f2 ;
-    margin: 0 3vw 3vw 3vw;
+    margin: 0 3vw 0 2vw;
+    padding: 2.5vw 0 3vw 0;
     border-radius: 25px;
-    padding-bottom: 7vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .titre_article{
-    padding: 3vw 0 0 3vw;
+    margin: 0.5vw 0 1vw 2.5vw;
 }
 
 #div_article{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 0 1.5em 2em 1.5em;
+    justify-content: space-between;
+    margin: 0 2.5vw 0 2.5vw;
 }
 .article_cards{
     background-color: #ffffff;
     background-size: cover;
-    padding: 0.4em 0.4em 0 0.4em;
-    margin: 0 1vw 2vw 1vw;
+    padding: 0.5em 0.5em 0 0.5em;
+    margin: 10px 0 20px 0;
     border-radius: 25px;
-    width: 15.5vw;
-    height: 240px;
+    width: 16vw;
+    height: 280px;
     box-shadow: 2px 2px 15px #d9d9d9;
 }
 
@@ -401,7 +385,8 @@ border-top: solid 2px transparent;
 
 .afficher_plus{
     font-size: 1.3em;
-    padding: 0 0 3vw 3vw;
+    padding: 0 0 3.5vw 0;
+    margin-left: 2.5vw;
 }
 
 
