--- a/style_reservia.css
+++ b/style_reservia.css
@@ -292,7 +292,7 @@
 
 /*SECTION 2 - HEBERGEMENT */
 
-#section_hebergement{
+.section_hebergement{
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -311,7 +311,7 @@
 /*ASIDE*/
 
 
-#pop{
+.pop{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -326,7 +326,7 @@
     display: flex;
     justify-content: space-between;
     width: 350px;
-    margin: 2vw 0 1.5vw 0;
+    margin: 30px 0 20px 0;
 }
 
 .titre_pop{
@@ -334,7 +334,7 @@
     font-weight: bold;
 }
 
-#div_aside{
+.div_aside{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -348,7 +348,7 @@
     width: 325px;
     height: 140px;
     padding: 5px 33px 5px 5px;
-    margin-bottom: 2vw;
+    margin-bottom: 30px;
     box-shadow: 2px 2px 15px #d9d9d9;
     transition: 0.5s;
 }
@@ -373,7 +373,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 0 1.5vw 0.75em 0;
+    padding: 0 20px 10px 0;
 }
 
 .info_cards_aside{
@@ -384,7 +384,7 @@
 
 
 /*Article*/
-#hebergement{
+.hebergement{
     background-color: #f2f2f2;
     border-radius: 25px;
     display: flex;
@@ -394,11 +394,11 @@
 }
 
 .titre_article{
-    margin: 2vw 0 1.5vw 2vw;
+    margin: 30px 0 20px 30px;
     font-weight: bold;
 }
 
-#div_article{
+.div_article{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -412,7 +412,7 @@
     border-radius: 25px;
     width: 250px;
     height: 180px;
-    margin: 0.25vw 0 1.25vw 0;
+    margin: 3.5px 0 18px 0;
     box-shadow: 2px 2px 15px #d9d9d9;
     transition: 0.5s;
 }
@@ -460,7 +460,7 @@
 }
 
 .div_afficher_plus{
-    margin: 1vw 0 0 2vw;
+    margin: 15px 0 0 30px;
 }
 
 
@@ -472,11 +472,11 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin: 2vw 0 2.5vw 0;
+    margin: 30px 0 35px 0;
 }
 
 .titre_activites{
-    padding: 1vw 0 2vw 0;
+    padding: 15px 0 30px 0;
     font-weight: bold;
 }
 
@@ -569,7 +569,7 @@
 
 /*Info activités*/
 .figcaption_activites{
-    height: 3vw;
+    height: 43px;
     padding: 0.75em 0 0.5em 1em;
     font-weight: bold;
 }
@@ -632,10 +632,47 @@
 /*1280*/
 @media screen and (max-width: 1280px){
 
-    .wrappers{
-        width: 100%;
+
+            /*hébergement*/
+    .section_hebergement{
+        flex-direction: column;
+        align-content: space-between;
     }
 
+
+            /*Aside*/
+    .pop{
+        margin: auto;
+        margin-bottom: 50px;
+        padding: 0 50px 30px 50px;
+    }
+
+    .div_pop_h2{
+        padding: 15px 0 30px 0;
+    }
+
+    .aside_cards{
+        margin-bottom: 50px;
+    }
+
+
+            /*Article*/
+    .hebergement{
+        margin: auto;
+        justify-content: center;
+        padding: 0 30px 50px 30px;
+    }
+
+    .titre_article{
+        padding: 15px 0 20px 0;
+    }
+
+    .div_article{
+    }
+
+    .article_cards{
+        margin: 3.5px 0 50px 0;
+    }
 
             /*activités*/
     
